# sdclone

./: .gitignore  .gitmodules  CHANGES.txt  CMakeLists.txt  INSTALL.txt  LICENSE  README.md  README.txt  TODO.txt  speed-dreams.desktop.in  unix64.cppcheck  win64.cppcheck
packaging/: CMakeLists.txt
packaging/3rdParty-devel/: CMakeLists.txt  LICENSE  README.md  TODO.txt  i686-w64-mingw32.cmake  readme.txt  thirdpartydefinitions.cmake  thirdpartydownloader.cmake  x86_64-w64-mingw32.cmake
packaging/3rdParty-devel/patches/: FreeSOLID-2.1.2.CMakeLists.txt  ReaderWriterTGA-fixed.cpp  enet-1.3.13.CMakeLists.txt  enet-1.3.14.CMakeLists.txt  enet-1.3.16.CMakeLists.txt  enet-1.3.18.CMakeLists.txt  freetype-2.5.3.CMakeLists.txt  freetype-2.9.1.CMakeLists.txt  glm-0.9.9.8.CMakeLists.txt  jpeg-9a.CMakeLists.txt  jpeg-9c.CMakeLists.txt  jpeg-9d.CMakeLists.txt  jpeg-9e.CMakeLists.txt  jpeg-9f.CMakeLists.txt  libogg-1.3.2.CMakeLists.txt  libogg-1.3.3.CMakeLists.txt  libvorbis-1.3.5.CMakeLists.txt  libvorbis-1.3.6.CMakeLists.txt  minizip-1.3.CMakeLists.txt  openal-soft-1.18.2.CMakeLists.txt  osg-3.6.3.types.txt  plib-1.8.5.CMakeLists.txt  sdl-1.2.15.CMakeLists.txt  sdl-2.0.10.CMakeLists.txt  sdl-2.0.12.CMakeLists.txt  sdl-2.0.9.CMakeLists.txt  sdl2_mixer-2.0.4.CMakeLists.txt  sqlite3-CMakeLists.txt  tinygltf-CMakeLists.txt
packaging/OSX/: DS_Store-full  createbaseapp.cmake.in  findersettings.scpt.in  packagedmg.cmake.in  packagefulldmg.cmake.in
packaging/appdata/: speed-dreams-2.appdata.xml
packaging/desura/: readme.txt
packaging/loki/setup.data/: setup.xml
packaging/portable/: sd-portable.bat.in
packaging/sources/: build.sh  sd-src-base.lst  sd-src-exclude.lst  sd-src-hq-cars-and-tracks.lst  sd-src-more-hq-cars-and-tracks.lst  sd-src-wip-cars-and-tracks.lst
packaging/windows/: readme_for_user.txt  speed-dreams-base.nsi  speed-dreams-hq-cars-and-tracks.nsi  speed-dreams-more-hq-cars-and-tracks.nsi  speed-dreams-unmaintained.nsi  speed-dreams-wip-cars-and-tracks.nsi  speed-dreams.nsh  speed-dreams.nsh.in
src/drivers/: CMakeLists.txt  Makefile
src/drivers/K1999/: CMakeLists.txt  K1999.cpp  K1999.dsp  K1999.vcproj  Makefile
src/drivers/berniw/: Makefile  berniw.cpp  berniw.h  berniw.vcproj  mycar.cpp  mycar.h  pathfinder.h  trackdesc.h
src/drivers/berniw2/: Makefile  berniw.h  berniw2.cpp  berniw2.vcproj  mycar.cpp  mycar.h  pathfinder.h  trackdesc.h
src/drivers/berniw3/: Makefile  berniw.h  berniw3.cpp  berniw3.vcproj  mycar.cpp  mycar.h  pathfinder.h  trackdesc.h
src/drivers/bt/: CMakeLists.txt  Makefile  bt.cpp  bt.vcproj  bt.xml  cardata.cpp  cardata.h  driver.cpp  driver.h  learn.cpp  learn.h  opponent.cpp  opponent.h  pit.cpp  pit.h  spline.cpp  spline.h  strategy.cpp  strategy.h
src/drivers/damned/: Makefile  damned.cpp  damned.vcproj  driver.cpp  driver.h  learn.h  opponent.cpp  opponent.h  strategy.h
src/drivers/dandroid/: CMakeLists.txt
src/drivers/human/: CMakeLists.txt  Makefile  car.xml  human.cpp  human.def  human.dsw  human.h  human.vcproj  human.xml  pref.cpp  pref.h  preferences.xml
src/drivers/hymie/: CMakeLists.txt  cardata.cpp  cardata.h  correct.cpp  correct.h  driver.cpp  driver.h  hymie.cpp  hymie.xml  learn.cpp  learn.h  linalg.h  opponent.cpp  opponent.h  pit.cpp  pit.h  spline.cpp  strategy.cpp  strategy.h
src/drivers/hymie_36GP/: Array.cpp  Array.h  AveragedData.cpp  AveragedData.h  Avoidance.h  BendAnalysis.cpp  BendAnalysis.h  CarModel.cpp  CarModel.h  ClothoidPath.cpp  ClothoidPath.h  Cubic.cpp  Cubic.h  CubicSpline.h  GenericAvoidance.cpp  GenericAvoidance.h  Hysteresis.cpp  Hysteresis.h  InsideLineAvoidance.cpp  InsideLineAvoidance.h  LearnedGraph.cpp  LearnedGraph.h  LinePath.cpp  LinePath.h  LinearAttractor.cpp  LinearAttractor.h  LinearRegression.cpp  LinearRegression.h  Makefile  MyRobot.cpp  MyRobot.h  MyTrack.cpp  MyTrack.h  Opponent.cpp  Opponent.h  OptimisedPath.cpp  OptimisedPath.h  OutsideLineAvoidance.cpp  OutsideLineAvoidance.h  ParametricCubic.cpp  (+34 more)
src/drivers/hymie_sc1/: Makefile  correct.cpp  driver.cpp  driver.h  hymie_sc1.cpp  hymie_sc1.def  hymie_sc1.dsp  hymie_sc1.dsw  hymie_sc1.sln  hymie_sc1.vcproj  hymie_sc1.xml  learn.cpp  learn.h  name.h  opponent.cpp  opponent.h  pit.h
src/drivers/hymie_sc2/: Makefile  cardata.cpp  correct.h  driver.cpp  hymie_sc2.cpp  hymie_sc2.def  hymie_sc2.dsp  hymie_sc2.dsw  hymie_sc2.sln  hymie_sc2.vcproj  hymie_sc2.xml  learn.h  name.h  pit.cpp  strategy.h
src/drivers/inferno/: Makefile  berniw.h  inferno.cpp  inferno.vcproj  mycar.cpp  mycar.h  pathfinder.cpp  pathfinder.h  trackdesc.h
src/drivers/inferno2/: Makefile  common.cpp  inferno2.cpp  inferno2.vcproj
src/drivers/kilo2008/: CMakeLists.txt  cardata.cpp  cardata.h  driver.cpp  driver.h  kdriver.cpp  kdriver.h  kilo2008.cpp  kilo2008.xml  linalg.h  opponent.cpp  opponent.h  pit.cpp  pit.h  raceline.cpp  raceline.h  spline.cpp  spline.h  strategy.cpp  strategy.h  util.cpp  util.h
src/drivers/lliaw/: Makefile  berniw.h  lliaw.cpp  lliaw.vcproj  mycar.cpp  mycar.h  pathfinder.cpp  pathfinder.h  trackdesc.h
src/drivers/locus/: Makefile  README  cardata.cpp  cardata.h  driver.cpp  driver.h  linalg.h  locus.cpp  locus.def  locus.dsp  locus.sln  locus.vcproj  locus.xml  opponent.cpp  opponent.h  pit.cpp  pit.h  raceline.cpp  raceline.h  strategy.cpp
src/drivers/networkhuman/: CMakeLists.txt  car.xml  networkhuman.cpp  networkhuman.h  pref.cpp  (+2 more)
src/interfaces/: CMakeLists.txt  Makefile  camera.h  car.h  graphic.h  idriver.h  idriverset.h  igraphicsengine.h  iphysicsengine.h  iraceengine.h  irobot.h  isoundengine.h  itrackloader.h  iuserinterface.h  js.h  playerpref.h  raceman.h  replay.h  robot.h  simu.h  sound.h  telemetry.h  track.h
src/libs/: CMakeLists.txt  Makefile
src/linux/: CMakeLists.txt  Makefile  linuxspec.cpp  main.cpp  speed-dreams.in  torcs-ng  torcs-ng.in
src/main/: CMakeLists.txt  Info.plist  main.cpp  resource.h
src/windows/: CMakeLists.txt  Makefile  main.cpp  osspec.h  speed-dreams.dsp  speed-dreams.vcproj  windowsspec.cpp  wtorcs-ng.dsp  wtorcs-ng.dsw  wtorcs.dsp  wtorcs.vcproj  wtorcsng.dsp
(+4460 files in other folders)
